Repaired edit transaction action, hid overflow-x

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,10 @@
 html, body, #root {
     margin: 0;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     color: white;
+    overflow-x: hidden;
+    overflow-y: visible;
 }
 
 .container {
